fix get started now alignment

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -566,6 +566,8 @@ body.lists.index #header .logo
       +text-shadow(2px 1px 0 $white_normal, 5px 4px 0 rgba(0, 0, 0, 0.15))
   .container
     margin-top: 0
+  .center
+    text-align: center
   .create-sm
     margin-top: 35px
   .create-xs
